@@ -42,8 +42,9 @@ apport (0.94) UNRELEASED; urgency=low
   * problem_report.py, write(): Add new permitted 'binary' argument value
     'compressed', which retains gzip compressed binary values instead of
     unpacking them transparently. Add test cases.
+  * problem_report, write_mime(): Eliminate unnecessary usage of StringIO.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 31 Jul 2007 19:23:25 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 31 Jul 2007 20:01:25 +0200
 
 apport (0.93) gutsy; urgency=low
 
